Remove WorldArgumentType
- Improved Toast sending